Fix font heights and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,37 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
-
 html {
-  box-sizing: border-box;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-  font-family:"Noto Sans Japanese", sans-serif;
+  font-family: "Noto Sans Japanese", sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
-*, *::before, *::after {
-  box-sizing: inherit;
+a {
+  text-decoration: none;
+}
+
+i {
+  font-style: normal;
+}
+
+.link {
+  border-bottom: 3px solid #8bc9d9;
+  color: #005e76;
+}
+
+ul {
+  margin: 0;
+}
+
+.embed-16by9 {
+  padding-top: 21%;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .nav {
+    text-align: right;
+  }
+
+}
+
+hr {
+  border-color: #e2e2e2;
 }
